fixed color contrast issue

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -52,7 +52,7 @@ h1 {
 
 nav {
     
-    background-color: #032251;    
+    background-color: #5c7ba9;    
 }
 
 .nav-menu{
